.xmonad/xmonad.errors
$ ghc --make xmonad.hs -i -ilib -fforce-recomp -main-is main -dynamic -v0 -outputdir /home/ayush/.xmonad/build-x86_64-linux -o /home/ayush/.xmonad/xmonad-x86_64-linux

xmonad.hs:94:12: error:
    • Data constructor not in scope: XF86XK_AudioLowerVolume :: KeySym
    • Perhaps you meant one of these:
        variable ‘xF86XK_AudioLowerVolume’ (imported from Graphics.X11.ExtraTypes.XF86),
        variable ‘xF86XK_AudioRaiseVolume’ (imported from Graphics.X11.ExtraTypes.XF86)
   |
94 |     , ((0, XF86XK_AudioLowerVolume     ), spawn "pactl set-sink-volume 0 -5%"                       )
   |            ^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:95:12: error:
    • Data constructor not in scope: XF86XK_AudioMute :: KeySym
    • Perhaps you meant one of these:
        variable ‘xF86XK_AudioMute’ (imported from Graphics.X11.ExtraTypes.XF86),
        variable ‘xF86XK_AudioMicMute’ (imported from Graphics.X11.ExtraTypes.XF86),
        variable ‘xF86XK_AudioPause’ (imported from Graphics.X11.ExtraTypes.XF86)
   |
95 |     , ((0, XF86XK_AudioMute            ), spawn "pactl set-sink-mute 0 toggle"                      )
   |            ^^^^^^^^^^^^^^^^
